# scylla-reader

./: .gitignore  README.md  flake.nix
extra/: demo1.tape  demo2.tape
plugin-template/: Cargo.toml  Makefile
plugin-template/.cargo/: config.toml
plugin-template/src/: lib.rs
scylla-plugin-api/: Cargo.toml
scylla-plugin-api/src/: lib.rs
scylla-reader/: Cargo.toml
scylla-reader/src/: cookie_store.rs  db.rs  input.rs  library.rs  main.rs  messenger.rs  worker.rs
scylla-reader/src/app/: mod.rs  modal.rs  page.rs
scylla-reader/src/input/: library.rs  mod.rs  modal.rs  reader.rs  settings.rs
scylla-reader/src/models/: book.rs  mod.rs  progress.rs
scylla-reader/src/scrapers/: cookie_store.rs  mod.rs  services.rs
scylla-reader/src/settings/: cookies.rs  fields.rs  mod.rs
scylla-reader/src/state/: mod.rs  modal.rs  page.rs  reader.rs
scylla-reader/src/ui/: library.rs  mod.rs  modal.rs  reader.rs  settings.rs  widgets.rs
