[package]
name = "scylla-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI and Terminal Handling
ratatui = "0.29"
crossterm = "0.28"
# Network and Scraping
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
# Async
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
curl = "0.4"

ratatui-image = { version = "3" }
image = "0.25"

rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"


extism = "1"
scylla-plugin-api = { path = "../scylla-plugin-api" }

[features]
vhs-mode = []
